# speculative-decoding

./: README.md  pyproject.toml
src/speculative_decoding/: __init__.py  benchmark.py  hf_engine.py  mock_engine.py  protocol.py  speculative_engine.py
tests/: test_correctness.py  test_edge_cases.py  test_hf_correctness.py
